--- a/styles/main.css
+++ b/styles/main.css
@@ -87,12 +87,23 @@ nav li a:hover {
     font-size: 30px;
 }
 
-/* .art-welcome button {
-    width: 15.69%;
+.boton-welcome button {
+    width: 12%;
     margin-top: 56px;
     margin-bottom: 5px;
-    height: 56px;
-} */
+    height: 30px;
+    background-color: rgb(32, 128, 253);
+    color: white;
+    border-radius: 3%;
+    cursor: pointer;
+}
+
+.boton-welcome input {
+    width: 20%;
+    margin-top: 56px;
+    margin-bottom: 5px;
+    height: 30px;
+}
 
 .parrafo {
     font-family: 'Open Sans', sans-serif;
@@ -111,7 +122,7 @@ nav li a:hover {
 .card-title {
     position: absolute;
     top: 6rem;
-    left: 40rem;
+    left: 35rem;
 
 }
 
@@ -123,8 +134,17 @@ nav li a:hover {
 .attribution {
     font-size: 11px;
     text-align: center;
-  }
+}
 
-  .attribution a {
+.attribution a {
     color: hsl(228, 45%, 44%);
-  }
+}
+
+
+.parte-gris {
+
+    position: relative;
+    background: #2c3e50;
+    height: 50vh;
+
+}
