--- a/styles/main.css
+++ b/styles/main.css
@@ -149,10 +149,17 @@ nav li a:hover {
     color: var(--primary-very-Dark-Blue);
     text-transform: capitalize;
     margin-bottom: 50px;
+    font-size: 40px;
 }
 
 .productive p{
     margin-top: 40px;
+    font-size: 18px;
+}
+
+.productive a{
+    font-size: 15px;
+    color: var(--acent-moderate-Cyan);
 }
 
 .sec-get-early {
