--- a/styles/main.css
+++ b/styles/main.css
@@ -175,4 +175,23 @@ nav li a:hover {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    
+}
+
+.sec-get-early h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+.sec-get-early p {
+    position: relative;
+
+}
+
+.form-get-stared {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 910px;
+    top: -103px;
 }
