--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,8 @@ html {
 .nav-bar ul li {
     display: inline-flex;
     justify-content: center;
+    /* position: 858px 26px; */
+    /* size: 87px 28px; */
     opacity: 100%;
     color: var(--primary-very-Dark-Blue);
     /* size: 16px; */
@@ -66,12 +68,18 @@ nav li a:hover {
     color: var(--primary-very-Dark-Blue);
     margin-top: 200px;
     margin-left: 50px;
+    font-weight: 400;
+    /* padding: 80px;
+    padding-top: 0;
+    margin-top: 29px;
+    letter-spacing: 0;
+    padding-bottom: 0;
+    margin-bottom: 24px; */
 }
 
 .art-welcome .welcome {
     margin-top: 20px;
     font-size: 30px;
-    margin-bottom: -20px;
 }
 
 .art-welcome .welcome2 {
@@ -80,36 +88,28 @@ nav li a:hover {
 }
 
 .boton-welcome button {
-    position: relative;
-    right: 10px;
-    top: -40px;
     width: 12%;
-    margin-top: 30px;
+    margin-top: 56px;
     margin-bottom: 5px;
-    height: 35px;
+    height: 30px;
     background-color: rgb(32, 128, 253);
-    border: hsl(224, 93%, 58%);
     color: white;
     border-radius: 3%;
     cursor: pointer;
 }
 
 .boton-welcome input {
-    position: relative;
-    right: 10px;
-    top: -40px;
     width: 20%;
     margin-top: 56px;
     margin-bottom: 5px;
-    height: 33px;
-    text-align: center;
+    height: 30px;
 }
 
 .parrafo {
     font-family: 'Open Sans', sans-serif;
     color: var(--primary-very-Dark-Blue);
     margin-top: 30px;
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .container {
@@ -143,7 +143,7 @@ nav li a:hover {
 .productive{
     margin-top: 280px;
     border: 1px solid red;
-    width: 45%;
+    max-width: 900px;
 }
 
 .productive h2{
@@ -167,30 +167,29 @@ nav li a:hover {
     border: 1px solid red;
 }
 
+.parte{
+    display: flex;
+    align-items: center;
+}
+
 .sec-get-early {
     position: relative;
-    left: -70px;
+    left: -120px;
+    padding: 50px;
     background-color: var(--primary-desaturated-Blue);
     color: white;
     font-family: 'Open Sans', sans-serif;
-    /* font-weight: 400; */
+    font-weight: 400;
     
 }
 
 .sec-get-early h1 {
-    position: relative;
-    font-size: 35px;
-    font-weight: 700;
-    top: 60px;
-    margin-bottom: 30px;
-    margin-left: 40px;
+    font-size: 30px;
+    margin-bottom: 10px;
 }
 
 .sec-get-early p {
     position: relative;
-    font-size: 19px;
-    top: 60px;
-    margin-left: 40px;
 
 }
 
