--- a/styles/main.css
+++ b/styles/main.css
@@ -82,6 +82,10 @@ nav li a:hover {
     font-size: 30px;
 }
 
+.welcome{
+    margin-top: 100px;
+}
+
 .boton-welcome button {
     width: 12%;
     margin-top: 56px;
@@ -108,8 +112,7 @@ nav li a:hover {
 }
 
 .parrafo1 {
-    margin-top: -250px;
-    margin-left: 100px;
+    margin-left: 20px;
 }
 .container {
     display: flex;
@@ -126,7 +129,9 @@ nav li a:hover {
 }
 
 #imagen1 {
-    width: 850px;
+    width: 650px;
+    margin-top: -100px;
+    margin-left: 200px;
 }
 
 
