--- a/styles/main.css
+++ b/styles/main.css
@@ -14,45 +14,44 @@
     box-sizing: border-box;
 }
 
-
-.nav-bar {
+.navbar ul {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    justify-content: center;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400, 700;
-    color: var(--primary-very-Dark-Blue);
-
-}
-
-#logo {
-    margin-right: 1000px;
-}
-
-.nav-bar ul li {
-    display: inline-flex;
-    justify-content: center;
-    /* position: 858px 26px; */
-    /* size: 87px 28px; */
-    opacity: 100%;
-    color: var(--primary-very-Dark-Blue);
-    /* size: 16px; */
-    /* letter-spacing: 0px 28px; */
-    font-family: 'Raleway', sans-serif;
+    list-style-type: none;
+  }
+  
+  .container {
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  
+  .navbar > div {
+    padding: 1em 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .navbar ul li {
+    text-align: start;
     list-style: none;
-
-}
-
-.nav-bar li a {
-    margin: 10px;
-    /* font-size: 16px; */
-    font-family: 'Raleway', sans-serif;
-    /* line-height: 28px; */
+    padding: 0px 20px;
+    color: var(--primary-very-Dark-Blue);
+  }
+  
+  .navbar ul li a {
+    text-transform: uppercase;
     text-decoration: none;
-}
+    font-size: 16px;
+  }
 
-nav li a:hover {
+  .navbar ul li a:hover{
     color: var(--primary-desaturated-Blue);
+  }
+
+.logo{
+    margin-left: 50px;
 }
 
 .art-welcome {
@@ -83,18 +82,31 @@ nav li a:hover {
 }
 
 .welcome{
-    margin-top: 100px;
+    margin-top: -40px;
+}
+
+.welcome2{
+    margin-top: 90px;
+}
+
+.parrafo1 {
+    margin-left: 20px;
+}
+.parrafo1 p{
+    margin-top: 20px;
 }
 
 .boton-welcome button {
     width: 12%;
-    margin-top: 56px;
-    margin-bottom: 5px;
+    /* margin-top: 56px;
+    margin-bottom: 5px; */
     height: 30px;
     background-color: rgb(32, 128, 253);
     color: white;
     border-radius: 3%;
     cursor: pointer;
+   width: 20%;
+  margin-left: 20px;
 }
 
 .boton-welcome input {
@@ -123,7 +135,7 @@ nav li a:hover {
 
 .card-title {
     position: absolute;
-    top: 6rem;
+    top: 7rem;
     left: 35rem;
 
 }
