--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,9 @@
 
 .welcome2{
     margin-top: 90px;
+    width: 40%;
+    font-size: 30px;
+    margin-left: 50px;
 }
 
 .parrafo1 {
@@ -97,20 +100,18 @@
 }
 
 .boton-welcome button {
-    width: 12%;
-    /* margin-top: 56px;
-    margin-bottom: 5px; */
     height: 30px;
     background-color: rgb(32, 128, 253);
     color: white;
     border-radius: 3%;
     cursor: pointer;
-   width: 20%;
-  margin-left: 20px;
+    width: 10%;
+    margin-left: 20px;
 }
 
 .boton-welcome input {
-    width: 20%;
+    width: 15%;
+    margin-left: 50px;
     margin-top: 56px;
     margin-bottom: 5px;
     height: 30px;
@@ -126,6 +127,12 @@
 .parrafo1 {
     margin-left: 20px;
 }
+
+.parrofo1 p {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -142,7 +149,7 @@
 
 #imagen1 {
     width: 650px;
-    margin-top: -100px;
+    /* margin-top: -100px; */
     margin-left: 200px;
 }
 
@@ -159,6 +166,7 @@
 .productive{
     margin-top: 280px;
     max-width: 900px;
+    margin-left: 50px;
 }
 
 .productive h2{
