--- a/styles/main.css
+++ b/styles/main.css
@@ -150,7 +150,7 @@
 #imagen1 {
     width: 650px;
     /* margin-top: -100px; */
-    margin-left: 200px;
+    margin-left: 300px;
 }
 
 
@@ -178,8 +178,9 @@
 }
 
 .productive p{
-    margin-top: 40px;
+    margin-top: 20px;
     font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .productive a{
@@ -192,6 +193,7 @@
     align-items: center;
     justify-content: space-between;
 }
+
 
 .card-title1 img{
     width: 50%;
