--- a/styles/main.css
+++ b/styles/main.css
@@ -201,6 +201,25 @@
     margin-top: 100px;
 }
 
+.tarjeta{
+    border: 1px solid red;
+    margin-top: -40px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    width: 300px;
+    /* height: 300px; */
+    padding: 20px;
+    /* font-size: 15px;*/
+}
+
+.tarjeta p{
+    font-size: 15px;
+}
+
+.tarjeta img{
+    border-radius: 50%;
+}
+
 .sec-get-early {
     position: relative;
     /* left: -120px; */
@@ -209,8 +228,8 @@
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
-    
 }
+
 
 .sec-get-early h1 {
     font-size: 30px;
