--- a/styles/main.css
+++ b/styles/main.css
@@ -261,11 +261,12 @@ form.get-early {
 }
 
 footer {
-  background: #f2f2f2;
+  background: var(--primary-very-Dark-Blue);
   padding: 60px 0;
+  color: #fff;
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin: auto;
 }
