--- a/styles/main.css
+++ b/styles/main.css
@@ -198,7 +198,8 @@
 }
 
 .tarjeta {
-  border: 1px solid red;
+  /* border: 1px solid black; */
+  background-color: var(--neutral-Light-Grayish-Blue);
   margin-top: -40px;
   margin-left: 50px;
   margin-bottom: 50px;
@@ -257,7 +258,6 @@ form.get-early {
   margin-top: -200px;
   display: flex;
   flex-direction: column;
-  
 }
 
 footer {
@@ -271,8 +271,6 @@ footer {
   margin: auto;
 }
 
-.invert { filter: invert(100%); }
-
-.fab{
-    color: #fff;
+.fab {
+  color: var(--neutral-Light-Grayish-Blue);
 }
