--- a/styles/main.css
+++ b/styles/main.css
@@ -36,13 +36,14 @@
   text-align: start;
   list-style: none;
   padding: 0px 20px;
-  color: var(--primary-very-Dark-Blue);
+  color: var(--acent-bright-Blue);
 }
 
 .navbar ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 16px;
+  color: var(--primary-very-Dark-Blue);
 }
 
 .navbar ul li a:hover {
@@ -84,11 +85,20 @@
   margin-left: 50px;
 }
 
+.parrafo {
+  font-family: "Open Sans", sans-serif;
+  color: var(--primary-very-Dark-Blue);
+  margin-top: 30px;
+  font-size: 15px;
+}
+
 .parrafo1 {
   margin-left: 20px;
 }
 .parrafo1 p {
   margin-top: 20px;
+  font-size: 20px;
+  font-family: 'Open Sans',sans-serif;
 }
 
 .boton-welcome button {
@@ -104,26 +114,10 @@
 
 .boton-welcome input {
   width: 15%;
-  margin-left: 50px;
+  margin-left: 70px;
   margin-top: 56px;
   margin-bottom: 5px;
   height: 30px;
-}
-
-.parrafo {
-  font-family: "Open Sans", sans-serif;
-  color: var(--primary-very-Dark-Blue);
-  margin-top: 30px;
-  font-size: 15px;
-}
-
-.parrafo1 {
-  margin-left: 20px;
-}
-
-.parrofo1 p {
-  font-size: 20px;
-  margin-top: 20px;
 }
 
 .container {
