--- a/styles/main.css
+++ b/styles/main.css
@@ -85,13 +85,6 @@
   margin-left: 50px;
 }
 
-.parrafo {
-  font-family: "Open Sans", sans-serif;
-  color: var(--primary-very-Dark-Blue);
-  margin-top: 30px;
-  font-size: 15px;
-}
-
 .parrafo1 {
   margin-left: 20px;
 }
@@ -123,7 +116,6 @@
 .container {
   display: flex;
   flex-direction: row;
-  /* justify-content: center; */
   margin: 20px;
 }
 
@@ -135,7 +127,6 @@
 
 #imagen1 {
   width: 650px;
-  /* margin-top: -100px; */
   margin-left: 300px;
 }
 
@@ -159,7 +150,6 @@
   text-transform: capitalize;
   margin-bottom: 50px;
   font-size: 40px;
-  font-weight: bold;
 }
 
 .productive p {
@@ -186,7 +176,6 @@
 }
 
 .tarjeta {
-  /* border: 1px solid black; */
   background-color: var(--neutral-Light-Grayish-Blue);
   margin-top: -40px;
   margin-left: 50px;
@@ -283,4 +272,9 @@ footer {
 footer ul li{
  list-style-type: none;
  padding: 5px;
+}
+
+.imagenb i{
+  padding: 20px;
+  margin-left: -20px;
 }
